# artbutler

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: master_ArtButler.yml
migrations/2023-04-19-143506_create_artposts/: down.sql  up.sql
migrations/2023-04-19-144833_create_botclients/: down.sql  up.sql
migrations/2023-04-20-090625_create_aggregatestore/: down.sql  up.sql
src/: aggregator.rs  artvault.rs  auth.rs  botclient.rs  content.rs  curator.rs  filters.rs  imgproc.rs  main.rs  schema.rs  telegram.rs
src/listings/: giphy.rs  imgur.rs  mod.rs  reddit.rs  source.rs  twitter.rs
